@@ -1,23 +1,22 @@
 package com.example.peeppo.domain.bid.service;
 
-import com.example.peeppo.domain.auction.dto.AuctionListResponseDto;
+import com.example.peeppo.domain.auction.dto.GetAuctionBidResponseDto;
 import com.example.peeppo.domain.auction.dto.TestListResponseDto;
 import com.example.peeppo.domain.auction.dto.TimeRemaining;
 import com.example.peeppo.domain.auction.entity.Auction;
 import com.example.peeppo.domain.auction.repository.AuctionRepository;
-import com.example.peeppo.domain.bid.dto.BidGoodsListRequestDto;
-import com.example.peeppo.domain.bid.dto.BidListResponseDto;
-import com.example.peeppo.domain.bid.dto.BidTradeListResponseDto;
-import com.example.peeppo.domain.bid.dto.ChoiceRequestDto;
+import com.example.peeppo.domain.bid.dto.*;
 import com.example.peeppo.domain.bid.entity.Bid;
 import com.example.peeppo.domain.bid.entity.Choice;
 import com.example.peeppo.domain.bid.enums.BidStatus;
-import com.example.peeppo.domain.bid.repository.BidRepository;
 import com.example.peeppo.domain.bid.repository.ChoiceBidRepository;
 import com.example.peeppo.domain.bid.repository.QueryRepository;
+import com.example.peeppo.domain.bid.repository.bid.BidRepository;
+import com.example.peeppo.domain.dibs.repository.DibsRepository;
 import com.example.peeppo.domain.goods.entity.Goods;
 import com.example.peeppo.domain.goods.enums.GoodsStatus;
-import com.example.peeppo.domain.goods.repository.GoodsRepository;
+import com.example.peeppo.domain.goods.repository.goods.GoodsRepository;
+import com.example.peeppo.domain.image.entity.Image;
 import com.example.peeppo.domain.image.repository.ImageRepository;
 import com.example.peeppo.domain.notification.entity.Notification;
 import com.example.peeppo.domain.notification.repository.NotificationRepository;
@@ -26,6 +25,7 @@ import com.example.peeppo.domain.rating.repository.ratingGoodsRepository.RatingG
 import com.example.peeppo.domain.user.dto.ResponseDto;
 import com.example.peeppo.domain.user.entity.User;
 import com.example.peeppo.domain.user.repository.UserRepository;
+import com.example.peeppo.global.responseDto.ApiResponse;
 import com.example.peeppo.global.responseDto.PageResponse;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
@@ -55,12 +55,21 @@ public class BidService {
     private final ChoiceBidRepository choiceBidRepository;
     private final RatingGoodsRepository ratingGoodsRepository;
     private final NotificationRepository notificationRepository;
+    private final DibsRepository dibsRepository;
 
     public ResponseDto bidding(User user, Long auctionId, BidGoodsListRequestDto bidGoodsListRequestDto) throws IllegalAccessException {
 
+        if (getAuction(auctionId).getUser().getUserId().equals(user.getUserId())) {
+            throw new IllegalAccessException("이미 참여중인 경매입니다.");
+        }
         Auction auction = getAuction(auctionId);
-        List<Bid> List = new ArrayList<>();
-        Double totalPrice = null;
+        List<Bid> bidList = new ArrayList<>();
+        Double totalPrice = 0D;
+
+        for (Long goodsId : bidGoodsListRequestDto.getGoodsId()) {
+            RatingGoods ratingGoods = ratingGoodsRepository.findByGoodsGoodsId(goodsId);
+            totalPrice += ratingGoods.getAvgRatingPrice();
+        }
 
         //경매 진행 여부
         if (!auction.getGoods().getGoodsStatus().equals(GoodsStatus.ONAUCTION) ||
@@ -73,67 +82,84 @@ public class BidService {
 
             if (goods.getIsDeleted() && !goods.getUser().getUserId().equals(user.getUserId())) {
                 System.out.println(" ");
-                throw new IllegalAccessException();//여기도 고민
+                throw new IllegalAccessException();
+                //여기도 고민
             }
-            if (goods.getGoodsStatus().equals(GoodsStatus.ONSALE)) {
-                RatingGoods ratingGoods = ratingGoodsRepository.findByGoodsGoodsId(goodsId);//시작가보다 낮을 경우
-
-                totalPrice += ratingGoods.getAvgRatingPrice();
-
-                List.add(new Bid(user, auction, goods, goodsImg));
+            if (goods.getGoodsStatus().equals(GoodsStatus.ONSALE) &&
+                    (totalPrice >= auction.getLowPrice())) {
+                //시작가보다 낮을 경우
+                bidList.add(new Bid(user, auction, goods, goodsImg, BidStatus.BIDDING));
                 goods.changeStatus(GoodsStatus.BIDDING);
             } else {
                 System.out.println("3 ");
                 throw new IllegalAccessException();
             }
         }
-        if (auction.getLowPrice() > totalPrice) {
-            throw new IllegalAccessException("물건의 총합이 하한가보다 낮습니다.");
+
+        List<Notification> notificationList = notificationRepository.findByUserUserId(auction.getUser().getUserId());
+
+        for (Notification notification : notificationList) {
+            if (notification == null) {
+                notification = new Notification();
+                notification.setUser(user);
+            }
+
+            notification.setIsAuction(false);
+            notification.updateAuctionCount();
+            notification.Checked(false);
+
+            notificationRepository.save(notification);
         }
-        Notification notification = notificationRepository.findByUserUserId(auction.getUser().getUserId());
 
-        if (notification == null) {
-            notification = new Notification();
-            notification.setUser(user);
-        }
 
-        notification.setIsAuction(false);
-        notification.updateAuctionCount();
-        notification.Checked(false);
-
-        notificationRepository.save(notification);
-
-        bidRepository.saveAll(List);
+        bidRepository.saveAll(bidList);
 
         return new ResponseDto("입찰이 완료되었습니다.", HttpStatus.OK.value(), "OK");
     }
 
-    public Page<BidListResponseDto> BidList(Long auctionId, int page, int size, String sortBy, boolean isAsc) {
-        Pageable pageable = paging(page, size, sortBy, isAsc);
-        Page<Bid> bidPage = bidRepository.findAllByAuctionAuctionId(auctionId, pageable);
+    // 입찰물품 전체조회
+    public Page<BidResponseListDto> BidList(Long auctionId, int page) {
+        Pageable pageable = PageRequest.of(page, 12);
+        Page<Bid> bidPage = bidRepository.findSortedBySellersPick(auctionId, pageable);
+        List<BidResponseListDto> bidResponseListDtos = new ArrayList<>();
+        for(Bid bid : bidPage){
+            List<Long> bidList = bidRepository.findBidIdByUserUserIdAndAuctionAuctionId(bid.getUser().getUserId(), auctionId);
+            String imageUrl = imageRepository.findByGoodsGoodsIdOrderByCreatedAtAscFirst(bid.getGoods().getGoodsId()).getImageUrl();
+            Long bidCount = bidRepository.countBidsByUserIdAndAuctionId(bid.getAuction().getAuctionId(), bid.getUser().getUserId());
+            bidResponseListDtos.add(new BidResponseListDto(bidList, bid, imageUrl, bidCount));
+        }
+        return new PageResponse<>(bidResponseListDtos, pageable, bidPage.getTotalElements());
+    }
 
-        Auction auction = getAuction(auctionId);
-        Long goodsId = auction.getGoods().getGoodsId();
-
-        String goodsImg = imageRepository.findByGoodsGoodsIdOrderByCreatedAtAscFirst(goodsId).getImageUrl();
-        List<BidListResponseDto> bidList = bidPage.getContent().stream()
-                .map(Bid -> new BidListResponseDto(Bid, goodsImg))
-                .toList();
-
-        return new PageResponse<>(bidList, pageable, bidPage.getTotalElements());
+    // 입찰물품 상세조회
+    public ApiResponse<List<BidDetailResponseDto>> sellectBids(Long auctionId, Long userId) {
+        List<Bid> bidList = bidRepository.findByAuctionAuctionIdAndUserUserId(auctionId, userId);
+        List<BidDetailResponseDto> bidDetailResponseDtos = new ArrayList<>();
+        for(Bid bid : bidList) {
+            Long dibs = dibsRepository.countByGoodsGoodsId(bid.getGoods().getGoodsId());
+            List<String> imageUrls = imageRepository.findByGoodsGoodsIdOrderByCreatedAtAsc(bid.getGoods().getGoodsId())
+                    .stream()
+                    .map(Image::getImageUrl)
+                    .collect(Collectors.toList());
+            bidDetailResponseDtos.add(new BidDetailResponseDto(bid, dibs, imageUrls));
+        }
+        return new ApiResponse<>(true, bidDetailResponseDtos, null);
     }
 
     //경매자가 선택
     public ResponseDto choiceBids(User user, Long auctionId, ChoiceRequestDto choiceRequestDto) throws IllegalAccessException {
         Auction auction = getAuction(auctionId);
-        List<Choice> bidsList = new ArrayList<>();
-
-        if (auction.getUser().getUserId().equals(user.getUserId())) {
-            getBiddingList(choiceRequestDto, auction, bidsList);
-        } else {
-            throw new IllegalAccessException();
+        if (!auction.getUser().getUserId().equals(user.getUserId())) {
+            throw new IllegalAccessException("잘못된 접근입니다. 다시 시도해주세요.");
         }
-
+        List<Bid> bidList = new ArrayList<>();
+        for (Long bidId : choiceRequestDto.getBidId()) {
+            Bid bid = bidRepository.findById(bidId)
+                    .orElseThrow(() -> new NullPointerException("존재하지 않는 입찰품입니다."));
+            bid.select();
+            bidList.add(bid);
+        }
+        bidRepository.saveAll(bidList);
         return new ResponseDto("선택이 완료되었습니다.", HttpStatus.OK.value(), "OK");
     }
 
@@ -157,7 +183,7 @@ public class BidService {
     }
 
     private void getBiddingList(ChoiceRequestDto choiceRequestDto, Auction auction, List<Choice> bidsList) throws IllegalAccessException {
-        for (Long bidId : choiceRequestDto.getbidId()) {
+        for (Long bidId : choiceRequestDto.getBidId()) {
             Bid bid = getBid(bidId);
 
             if (!auction.getAuctionId().equals(bid.getAuction().getAuctionId())) {
@@ -169,33 +195,32 @@ public class BidService {
         choiceBidRepository.saveAll(bidsList);
     }
 
-    public ResponseEntity<Page<BidTradeListResponseDto>> bidTradeList(User user, int page, int size, String sortBy, boolean isAsc,
-                                                                      BidStatus bidStatus) {
-        Pageable pageable = paging(page, size, sortBy, isAsc);
-        Page<Auction> myAuctionPage = null;
+    public ResponseEntity<Page<GetAuctionBidResponseDto>> bidTradeList(User user, int page, int size, String sortBy, boolean isAsc,
+                                                                       BidStatus bidStatus) {
 
-//        Goods goods = auction.getGoods();
-//        TimeRemaining timeRemaining = countDownTime(auction);
-//        Long bidCount = findBidCount(auction.getAuctionId());
-//        AuctionResponseDto auctionResponseDto = new AuctionResponseDto(auction, goods, timeRemaining, bidCount);
+        Pageable pageable = paging(page, size, sortBy, isAsc);
+        Page<Auction> myAuctionPage;
+        List<GetAuctionBidResponseDto> auctionResponseDtoList = new ArrayList<>();
+
         if (bidStatus != null) {
-            Bid bid = bidRepository.findByUserUserIdAndBidStatus(user.getUserId(), bidStatus);
-            Long auctionId = bidRepository.findAuctionIdByBidId(bid.getBidId());
-            myAuctionPage = auctionRepository.findByAuctionId(auctionId, pageable);
+            myAuctionPage = auctionRepository.findAuctionListByUserUserIdAndBidStatus(user.getUserId(), pageable, bidStatus);
         } else {
-            Bid bid = bidRepository.findByUserUserId(user.getUserId());
-            Long auctionId = bidRepository.findAuctionIdByBidId(bid.getBidId());
-            myAuctionPage = auctionRepository.findByAuctionId(auctionId, pageable);
+            myAuctionPage = auctionRepository.findAuctionListByUserUserId(user.getUserId(), pageable);
         }
 
-        List<BidTradeListResponseDto> auctionResponseDtoList = myAuctionPage.stream()
-                .map(auction -> {
-                    TimeRemaining timeRemaining = countDownTime(auction);
-                    Long bidCount = findBidCount(auction.getAuctionId());
-                    Bid bid = bidRepository.findByAuctionAuctionId(auction.getAuctionId());
-                    return new BidTradeListResponseDto(auction, timeRemaining, bidCount, bid);
-                })
-                .collect(Collectors.toList());
+        for (Auction auction : myAuctionPage) {
+            List<Bid> bidList = bidRepository.findByAuctionAuctionIdAndUserUserId(auction.getAuctionId(), user.getUserId());
+
+            List<BidListResponseDto> bidListResponseDtos = new ArrayList<>();
+            for (Bid bid : bidList) {
+                bidListResponseDtos.add(new BidListResponseDto(bid, bid.getGoodsImg()));
+            }
+            TimeRemaining timeRemaining = countDownTime(auction);
+            Long bidCount = findBidCount(auction.getAuctionId());
+            TestListResponseDto responseDto = new TestListResponseDto(auction, timeRemaining, bidCount);
+            GetAuctionBidResponseDto getAuctionBidResponseDto = new GetAuctionBidResponseDto(responseDto, bidListResponseDtos);
+            auctionResponseDtoList.add(getAuctionBidResponseDto);
+        }
 
         PageResponse response = new PageResponse<>(auctionResponseDtoList, pageable, myAuctionPage.getTotalElements());
         return ResponseEntity.status(HttpStatus.OK.value()).body(response);
